[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/Player 2/Player2.gd" type="Script" id=1]
[ext_resource path="res://Characters/Damage/tank_explosion2.png" type="Texture" id=2]
[ext_resource path="res://Characters/Damage/tank_explosion3.png" type="Texture" id=3]
[ext_resource path="res://Characters/Damage/tank_explosion4.png" type="Texture" id=4]
[ext_resource path="res://Characters/Player 2/playerShip1_green.png" type="Texture" id=5]
[ext_resource path="res://Audio/sfx_laser2.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.7567

[sub_resource type="CircleShape2D" id=3]
radius = 28.691

[node name="Player2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -3.14159
frames = SubResource( 1 )
animation = "Normal"

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 48 )
rotation = 3.14159

[node name="Timer" type="Timer" parent="."]

[node name="HitArea" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="HitArea"]
visible = false
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
